--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</nav>
 			<nav class="main-navigation">
 				<div class="catalog">
-					<h2 class="catalog-heading">Каталог товаров<span class="plus"></span></h2>
+					<h2 class="catalog-heading"><a href="catalog.html">Каталог товаров<span class="plus"></span></a></h2>
 					<div class="product-list-wrapper">
 						<ul class="product-list">						
 							<li class="catalog-item"><a href="" class="catalog-item-link">Виртуальная реальность</a></li>
