--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Device</title>
 	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/tiny-slider.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -49,18 +50,18 @@
 	</header>
 	<main>
 		<div class="wrapper-center wrapper-main">
-			<section class="slider">
+			<section class="slider tiny-slider">
 				<div class="slider-item slider1">
 					<span class="slider-number">01</span>
 					<h2 class="slider-heading">Делай селфи, как Бен Стиллер!</h2>					
 					<p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
 					<img class="slider-img" src="img/slider-1.png" alt="Самая длинная палка для селфи" width="384" height="486">
 					<a href="" class="yellow-button slider-button">Подробнее</a>
-					<div class="slider-controls">
+					<!--<div class="slider-controls">
 						<i class="active"></i>
 						<i></i>
 						<i></i>
-					</div>
+					</div>-->
 					<table class="info-table">
 						<tr>
 							<td>8,5 м</td>
@@ -81,11 +82,11 @@
 					<p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
 					<img class="slider-img" src="img/slider-2.png" alt="Мотивирующие фитнес-браслеты" width="345" height="485">
 					<a href="" class="yellow-button slider-button">Подробнее</a>
-					<div class="slider-controls">
+					<!--<div class="slider-controls">
 						<i></i>
 						<i class="active"></i>
 						<i></i>
-					</div>
+					</div>-->
 					<table class="info-table">
 						<tr>
 							<td>48 часов</td>						
@@ -101,11 +102,11 @@
 					<p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
 					<img class="slider-img" src="img/slider-3.png" alt="Квадрокоптер" width="526" height="334">
 					<a href="" class="yellow-button slider-button">Подробнее</a>
-					<div class="slider-controls">
+					<!--<div class="slider-controls">
 						<i class="active"></i>
 						<i></i>
 						<i></i>
-					</div>
+					</div>-->
 					<table class="info-table">
 						<tr>
 							<td>800 м</td>
@@ -307,6 +308,8 @@
 		<img src="img/modal-map.jpg" alt="г. Москва, ул. Строителей, 15" width="960" height="559">
 		<button class="modal-close" type="button">Закрыть</button>
 	</section>
+	<script src="js/tiny-slider.js"></script>
+	<script src="js/slider.js"></script>
 	<script src="js/popup.js"></script>
 </body>
 </html>
